[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/arcades/OpenBar/OPplayer.gd" type="Script" id=1]
[ext_resource path="res://objects/arcades/OpenBar/OPgfxPlayer.png" type="Texture" id=2]
[ext_resource path="res://objects/arcades/OpenBar/OPgfxBarrelhead.png" type="Texture" id=3]

[sub_resource type="Animation" id=7]
resource_name = "climb"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 0, 0, 0 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walkcarry"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( -1, 2 ), Vector2( -0.5, 3 ) ]
}

[sub_resource type="RayShape2D" id=8]
length = 1.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 7 )

[node name="OPplayer" type="KinematicBody2D"]
collision_layer = 262144
collision_mask = 524288
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -8, -16 )
flip_h = true
hframes = 10
vframes = 3

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 3 )
offset = Vector2( -1, 2 )
hframes = 4

[node name="AniPlay" type="AnimationPlayer" parent="."]
anims/climb = SubResource( 7 )
anims/die = SubResource( 6 )
anims/walk = SubResource( 1 )
anims/walkcarry = SubResource( 5 )

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 8 )

[node name="Col2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 4 )
